@@ -400,6 +400,22 @@ case "$enable_rrtype_cds" in
 	no|*)
 		;;
 esac
+AC_ARG_ENABLE(rrtype-cdnskey, AC_HELP_STRING([--enable-rrtype-cdnskey], [Enable draft RR type cdnskey.]))
+case "$enable_rrtype_cdnskey" in
+	yes)
+		AC_DEFINE_UNQUOTED([RRTYPE_CDNSKEY], [], [Define this to enable RR type CDNSKEY.])
+		;;
+	no|*)
+		;;
+esac
+AC_ARG_ENABLE(rrtype-openpgpkey, AC_HELP_STRING([--enable-rrtype-openpgpkey], [Enable draft RR type openpgpkey.]))
+case "$enable_rrtype_openpgpkey" in
+	yes)
+		AC_DEFINE_UNQUOTED([RRTYPE_OPENPGPKEY], [], [Define this to enable RR type OPENPGPKEY.])
+		;;
+	no|*)
+		;;
+esac
 AC_ARG_ENABLE(rrtype-uri, AC_HELP_STRING([--enable-rrtype-uri], [Enable draft RR type uri.]))
 case "$enable_rrtype_uri" in
 	yes)
