@@ -189,8 +189,12 @@ enum ldns_enum_rr_type
 	LDNS_RR_TYPE_RKEY = 57,
         /** draft-ietf-dnsop-trust-history */
         LDNS_RR_TYPE_TALINK = 58,
-	/** draft-barwood-dnsop-ds-publis */
+	/** draft-ietf-dnsop-delegation-trust-maintainance */
 	LDNS_RR_TYPE_CDS = 59,
+	/** draft-ietf-dnsop-delegation-trust-maintainance */
+	LDNS_RR_TYPE_CDNSKEY = 60,
+	/** draft-ietf-dane-openpgpkey */
+	LDNS_RR_TYPE_OPENPGPKEY = 61,
 
 	LDNS_RR_TYPE_SPF = 99, /* RFC 4408 */
 
