@@ -16,6 +16,8 @@ TBD
 	* Fix configure to make ldns compile with LibreSSL 2.0
 	* drill now also accepts dig style -y option
 	  (-y <[algo:]name:key> i.s.o. -y <name:key[:algo]>)
+	* CDNSKEY and OPENPGPKEY draft rr types.
+	  enable with: --enable-rrtype-cdnskey and --enable-rrtype-openpgpkey
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
